<resources>
    <string name="app_name">Social Media App</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="password">password</string>
    <string name="login">login</string>
    <string name="sign_in">Sign in</string>
    <string name="register">Register</string>
    <string name="no_acc_yet">Don\'t have account yet?</string>
    <string name="forename">forename</string>
    <string name="surname">surname</string>
    <string name="country">country</string>
    <string name="city">city</string>
    <string name="choose_your_interests">Choose your interests</string>
    <string name="fill_in_all_fields">Fill in all fields</string>
    <string name="sign_up">Sign up</string>
    <string name="interests">Interests</string>
    <string name="edit_account">Edit Account</string>
    <string name="removeFriendship">remove friendship</string>
    <string name="send_friend_request">Send friend request</string>
    <string name="send_message">send message</string>
    <string name="reject_friendship_request">reject friendship request</string>
    <string name="cancel_friendship_request">cancel friendship request</string>
    <string name="accept_request">Accept Request</string>
    <string name="save">Save</string>
    <string name="edit_fields_to_change_your_account_information">Edit fields to change your account information</string>
    <string name="add_post">Add Post</string>
    <string name="reload">reload</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="add_comment">Add comment</string>
    <string name="load_more">Load more</string>
    <string name="delete_account">Delete account</string>
    <string name="change_search_method">change search method</string>
    <string name="choose_interest">Choose interest</string>
    <string name="find_profiles">Find profiles</string>
    <string name="my_profile">My profile</string>
    <string name="change_relationship_type">Change relationship type</string>
    <string name="my_relationships">My relationships</string>
    <string name="friends">Friends</string>
    <string name="message_content">message content</string>
</resources>